--- a/ldw-tarefa-02/views/index.html
+++ b/ldw-tarefa-02/views/index.html
@@ -77,7 +77,7 @@
         </div>
 
         <!-- Informações do sistema -->
-        <div class="row">
+        <div class="row mb-5">
             <div class="col-12">
                 <div class="card">
                     <div class="card-body text-center">
