--- a/ldw-tarefa-02/views/estoque.html
+++ b/ldw-tarefa-02/views/estoque.html
@@ -7,16 +7,11 @@
         </h1>
         <p class="lead text-muted">Gerencie seu inventário de jogos</p>
     </div>
-    <div class="text-end">
-        <span class="badge bg-primary fs-6 px-3 py-2">
-            <i class="fas fa-gamepad me-1"></i>{{ gameEstoque|length }} Jogos
-        </span>
-    </div>
 </div>
 
 <details class="mb-5">
     <summary>
-        <i class="fas fa-plus me-2"></i>Cadastrar Novo Jogo
+        Cadastrar Novo Jogo
     </summary>
     <div class="card mt-3">
         <div class="card-header">
@@ -76,7 +71,7 @@
         </div>
     </div>
 </details>
-<div class="card">
+<div class="card m-5">
     <div class="card-header">
         <h5 class="mb-0">
             <i class="fas fa-list me-2"></i>Inventário de Jogos
